@@ -3,20 +3,11 @@ package com.freelancer.gateway.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.server.reactive.ServerHttpRequest;
-import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-import org.springframework.web.server.ServerWebExchange;
-import org.springframework.web.server.WebFilter;
-import org.springframework.web.server.WebFilterChain;
-import reactor.core.publisher.Mono;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -25,23 +16,25 @@ public class CorsConfig {
     @Value("${app.env:dev}")
     private String appEnv;
 
+    // Production frontend URL — set via environment variable
+    @Value("${cors.allowed-origins:http://localhost:3000}")
+    private String allowedOriginsStr;
+
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        if (appEnv.equals("dev")) {
-            // Development — allow ALL origins
-            // This fixes the different device problem completely
+        if ("dev".equals(appEnv)) {
             config.addAllowedOriginPattern("*");
         } else {
-            // Production — only allow your deployed frontend URL
-            config.setAllowedOrigins(List.of(
-                "*"   // replace with real URL
-            ));
+            config.setAllowedOrigins(
+                Arrays.asList(allowedOriginsStr.split(",")));
         }
 
         config.setAllowedMethods(List.of(
-            "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+            "GET", "POST", "PUT", "DELETE",
+            "PATCH", "OPTIONS",
+            "HEAD"     // ← needed for WebSocket upgrade
         ));
 
         config.setAllowedHeaders(List.of(
@@ -51,7 +44,12 @@ public class CorsConfig {
             "X-User-Role",
             "X-User-Email",
             "X-User-FirstName",
-            "X-User-LastName"
+            "X-User-LastName",
+            "X-User-FullName",
+            "Upgrade",           // ← needed for WebSocket
+            "Connection",        // ← needed for WebSocket
+            "Sec-WebSocket-Key", // ← needed for WebSocket
+            "Sec-WebSocket-Version" // ← needed for WebSocket
         ));
 
         config.setAllowCredentials(true);
@@ -60,7 +58,6 @@ public class CorsConfig {
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return new CorsWebFilter(source);
     }
 }
